body-color-changed

--- a/index.html
+++ b/index.html
@@ -492,40 +492,46 @@
             <div class="view-all-btn d-flex align-items-center justify-content-center">View All</div>
         </div>
         <div class="all-row row mt-4">
-            <div class="each-blog col-lg-4 col-sm-12">
-                <div>
-                    <img class="blog-img " src="./resources/img/pexels-photo-4568810.png" alt="Card image">
-                </div>
-                <div class="ml-3">
-                    <div id="s1">Johnson Decot</div>
-                    <div id="s2">20 Dec, 2020</div>
-                    <div id="s3">Lorem Ipsum is simply dummy text</div>
-                    <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
-                    <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
-                </div>
-            </div>
-            <div class="each-blog col-lg-4 col-sm-12">
-                <div>
-                    <img class="blog-img " src="./resources/img/pexels-photo-4144223@2x.png" alt="Card image">
-                </div>
-                <div class="ml-3">
-                    <div id="s1">Washington Deni</div>
-                    <div id="s2">20 Dec, 2020</div>
-                    <div id="s3">Lorem Ipsum is simply dummy text</div>
-                    <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
-                    <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="each-blog">
+                    <div>
+                        <img class="blog-img " src="./resources/img/pexels-photo-4568810.png" alt="Card image">
+                    </div>
+                    <div class="ml-3">
+                        <div id="s1">Johnson Decot</div>
+                        <div id="s2">20 Dec, 2020</div>
+                        <div id="s3">Lorem Ipsum is simply dummy text</div>
+                        <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
+                        <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
+                    </div>
                 </div>
             </div>
-            <div class="each-blog col-lg-4 col-sm-12">
-                <div>
-                    <img class="blog-img " src="./resources/img/pexels-photo-701740.png" alt="Card image">
-                </div>
-                <div class="ml-3">
-                    <div id="s1">Mariya Joseph</div>
-                    <div id="s2">20 Dec, 2020</div>
-                    <div id="s3">Lorem Ipsum is simply dummy text</div>
-                    <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
-                    <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="each-blog">
+                    <div>
+                        <img class="blog-img " src="./resources/img/pexels-photo-4144223@2x.png" alt="Card image">
+                    </div>
+                    <div class="ml-3">
+                        <div id="s1">Washington Deni</div>
+                        <div id="s2">20 Dec, 2020</div>
+                        <div id="s3">Lorem Ipsum is simply dummy text</div>
+                        <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
+                        <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
+                    </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="each-blog">
+                    <div>
+                        <img class="blog-img " src="./resources/img/pexels-photo-701740.png" alt="Card image">
+                    </div>
+                    <div class="ml-3">
+                        <div id="s1">Mariya Joseph</div>
+                        <div id="s2">20 Dec, 2020</div>
+                        <div id="s3">Lorem Ipsum is simply dummy text</div>
+                        <div id="s4">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.It is a long established fact.</div>
+                        <div id="s5">Read More <span><img src="./resources/icons/507257.svg" class="arow" alt="arrow"></span></div>
+                    </div>
                 </div>
             </div>
         </div>
