final link ready

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <!--  section Top brands  -->
     <section class="section-brands mt-4">
         <h2 class="heading-side heading-part">Top Brands</h2>
-            <div class="bg-c mt-5  mx-auto d-flex align-items-center">
+            <div class="bg-c mt-3  mx-auto d-flex align-items-center">
                 <div class="all-icon"><img src="/resources/img/image@2x.png" class="sony-logo" alt=""></div>
                 <div class="all-icon"><img src="/resources/img/Logo-Samsung.png"  class="samsung-logo" alt=""></div>
                 <div class="all-icon"><img src="/resources/img/Dell_Logo@2x.png" class="dell-logo" alt=""></div>
@@ -497,7 +497,7 @@
                     <div>
                         <img class="blog-img " src="./resources/img/pexels-photo-4568810.png" alt="Card image">
                     </div>
-                    <div class="ml-3">
+                    <div class="ml-3 mt-2">
                         <div id="s1">Johnson Decot</div>
                         <div id="s2">20 Dec, 2020</div>
                         <div id="s3">Lorem Ipsum is simply dummy text</div>
@@ -511,7 +511,7 @@
                     <div>
                         <img class="blog-img " src="./resources/img/pexels-photo-4144223@2x.png" alt="Card image">
                     </div>
-                    <div class="ml-3">
+                    <div class="ml-3  mt-2">
                         <div id="s1">Washington Deni</div>
                         <div id="s2">20 Dec, 2020</div>
                         <div id="s3">Lorem Ipsum is simply dummy text</div>
@@ -525,7 +525,7 @@
                     <div>
                         <img class="blog-img " src="./resources/img/pexels-photo-701740.png" alt="Card image">
                     </div>
-                    <div class="ml-3">
+                    <div class="ml-3  mt-2">
                         <div id="s1">Mariya Joseph</div>
                         <div id="s2">20 Dec, 2020</div>
                         <div id="s3">Lorem Ipsum is simply dummy text</div>
@@ -538,7 +538,7 @@
     </section>
     <!--  Section subscription -->
     <section class="section-subcription">
-        <div class="d-flex justify-content-center align-items-center pt-3">
+        <div class="subscribe-1 d-flex justify-content-center align-items-center ">
             <div id="subscription">
                 <p id="sub-1">Get the latest news and offers</p>
                 <p id="sub-2" >Subscribe To Newsletter</p>
@@ -627,17 +627,17 @@
                 </div>
                 <div class="down-ro col-sm-12 col-md-2">
                     <h3>Download App</h3>
-                    <span class="apple-android d-flex">
-                        <img src="./resources/icons/Group 50462.svg" alt="">
-                        <img src="./resources/icons/Group 50463.svg" alt="">
-                    </span>
-                    <h3>Follow Us</h3>
-                    <span>
-                        <span><img src="./resources/icons/facebook.svg" alt="" class="footer-left-icon"><span>
-                        <span><img src="./resources/icons/twitter.svg" alt="" class="footer-left-icon"><span>
-                        <span><img src="./resources/icons/instagram.svg" alt="" class="footer-left-icon"><span>
-                        <span><img src="./resources/icons/linkedin.svg" alt="" class="footer-left-icon"><span>
-                    </span>
+                        <span class="apple-android mt-3 d-flex">
+                            <img src="./resources/icons/Group 50462.svg" alt="">
+                            <img src="./resources/icons/Group 50463.svg" alt="">
+                        </span>
+                        <h3 class="mt-3">Follow Us</h3>
+                        <span>
+                            <span><img src="./resources/icons/facebook.svg" alt="" class="footer-left-icon"><span>
+                            <span><img src="./resources/icons/twitter.svg" alt="" class="footer-left-icon"><span>
+                            <span><img src="./resources/icons/instagram.svg" alt="" class="footer-left-icon"><span>
+                            <span><img src="./resources/icons/linkedin.svg" alt="" class="footer-left-icon"><span>
+                        </span>
                 </div>
             </div>
         </div>
