--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
         <!-- section 2 repeat 1 -->
         <section class="section-2">
             <div class="all-3 row">
-                <div class="col-xl-4 col-md-4"><img src="./resources/img/Group 51175@2x.png" alt="laptop" class="three-img"></div>
-                <div class="col-xl-4 col-md-4"><img src="./resources/img/Group 51176.png" alt="headphone" class="three-img"></div>
-                <div class="col-xl-4 col-md-4"><img src="./resources/img/Group 51177.png" alt="watch" class="three-img"></div>
+                <div class="col-xl-4 pb-3 col-md-4"><img src="./resources/img/Group 51175@2x.png" alt="laptop" class="three-img"></div>
+                <div class="col-xl-4 pb-3 col-md-4"><img src="./resources/img/Group 51176.png" alt="headphone" class="three-img"></div>
+                <div class="col-xl-4 pb-3 col-md-4"><img src="./resources/img/Group 51177.png" alt="watch" class="three-img"></div>
             </div>
         </section>
         <!-- ------------------------------- -->
